--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,7 @@
 .idea
 src/github.com
-src/golang.org
-src/gopkg.in
 bin
 pkg
 src/userws/service_test.yml
-env.set
-env.unset
+env.*
 buildtag.build-0
