--- a/pipeline/buildspec.yml
+++ b/pipeline/buildspec.yml
@@ -23,7 +23,7 @@ phases:
 
   build:
     commands:
-      - docker build -f package/Dockerfile -t $CONTAINER_IMAGE:latest --build-arg BUILD_TAG=$BUILD_VERSION .
+      - docker build -f package/Dockerfile -t $CONTAINER_IMAGE:latest --label "commit=$CODEBUILD_SOURCE_VERSION" --build-arg BUILD_TAG=$BUILD_VERSION .
       - docker tag $CONTAINER_IMAGE:latest $CONTAINER_REGISTRY/$CONTAINER_IMAGE:latest
       - docker tag $CONTAINER_IMAGE:latest $CONTAINER_REGISTRY/$CONTAINER_IMAGE:build-$BUILD_VERSION
       - docker push $CONTAINER_REGISTRY/$CONTAINER_IMAGE:latest
@@ -32,9 +32,6 @@ phases:
 
 #  post_build:
 #    commands:
-
-artifacts:
-  name: build-$BUILD_VERSION
 
 #
 # end of file
