--- a/pipeline/buildspec.yml
+++ b/pipeline/buildspec.yml
@@ -23,9 +23,10 @@ phases:
 
   build:
     commands:
-      - docker build -f package/Dockerfile -t $CONTAINER_IMAGE:latest --label "commit=$CODEBUILD_SOURCE_VERSION" --build-arg BUILD_TAG=$BUILD_VERSION .
+      - docker build -f package/Dockerfile -t $CONTAINER_IMAGE:latest --build-arg BUILD_TAG=$BUILD_VERSION .
       - docker tag $CONTAINER_IMAGE:latest $CONTAINER_REGISTRY/$CONTAINER_IMAGE:latest
       - docker tag $CONTAINER_IMAGE:latest $CONTAINER_REGISTRY/$CONTAINER_IMAGE:build-$BUILD_VERSION
+      - docker tag $CONTAINER_IMAGE:latest $CONTAINER_REGISTRY/$CONTAINER_IMAGE:$CODEBUILD_SOURCE_VERSION
       - docker push $CONTAINER_REGISTRY/$CONTAINER_IMAGE:latest
       - docker push $CONTAINER_REGISTRY/$CONTAINER_IMAGE:build-$BUILD_VERSION
       - aws --region=$AWS_REGION ssm put-parameter --name /containers/$CONTAINER_IMAGE/latest --value build-$BUILD_VERSION --type String --overwrite
